hotrod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: hotrod
spec:
  selector:
    app: hotrod
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 8083
      targetPort: metrics
