hotrod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotrod
  namespace: hotrod
spec:
  tls:
  - hosts:
      - hotrod.lab.home
    secretName: hotrod-tls
  rules:
  - host: hotrod.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotrod
            port:
              number: 8080
